[package]
name = "clearswi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLEAR-SWI susceptibility weighted imaging CLI"

[[bin]]
name = "clearswi"
path = "src/main.rs"

[dependencies]
mritools-common = { path = "../common" }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
